Added Website Style + More examples

--- a/etsi-failprint.html
+++ b/etsi-failprint.html
@@ -5,16 +5,25 @@
   <title>etsi-failprint Docs</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <nav>
-    <h1>etsi</h1>
-    <ul>
-      <li><a href="etsi-watchdog.html">etsi-watchdog</a></li>
-      <li><a href="etsi-failprint.html" class="active">etsi-failprint</a></li>
+<body class="documentation">
+  
+   <!-- navbar -->
+  <nav class="navbar">
+    <h1 class="logo">etsi Documentation</h1>
+    <ul class="nav-links">
+      <li><a href="etsi-watchdog.html" class="active">etsi-watchdog</a></li>
+      <li><a href="etsi-failprint.html">etsi-failprint</a></li>
       <li><a href="etsi-etna.html">etsi-etna</a></li>
     </ul>
   </nav>
-  <main>
+
+  <div class="shine-container">
+    <a href="https://github.com/etsi-ai/etsi-watchdog" target="_blank" class="shine-text">
+      Visit GitHub to Contribute
+    </a>
+  </div>
+
+  <main class="content">
     <h2>etsi-failprint</h2>
     <p><strong>Terminal error monitoring & live logs display.</strong></p>
 
